Gradle's whims